tests/snapshots/snapshot_tests__mouse_default.snap
---
source: tests/snapshot_tests.rs
expression: kdl
---
// Mouse settings - managed by Nirify

input {
    mouse {
    }
}
