tests/snapshots/snapshot_tests__outputs_empty.snap
---
source: tests/snapshot_tests.rs
expression: kdl
---
// Output/Display settings - managed by niri-settings-rust

// No outputs configured yet.
// Add outputs through the UI or manually here.
// Example:
// output "eDP-1" {
//     scale 1.0
// }
