tests/snapshots/snapshot_tests__outputs_multiple.snap
---
source: tests/snapshot_tests.rs
expression: kdl
---
// Output/Display settings - managed by Nirify

output "DP-1" {
    scale 2.00
    mode "3840x2160@60"
    position x=0 y=0
}

output "HDMI-A-1" {
    mode "1920x1080@60"
    position x=3840 y=0
    transform "90"
}
