tests/snapshots/snapshot_tests__overview_default.snap
---
source: tests/snapshot_tests.rs
expression: kdl
---
// Overview settings - managed by Nirify

overview {
    zoom 0.50
}
