tests/snapshots/snapshot_tests__overview_with_backdrop.snap
---
source: tests/snapshot_tests.rs
expression: kdl
---
// Overview settings - managed by Nirify

overview {
    zoom 0.75
    backdrop-color "#000000cc"
}
