tests/snapshots/snapshot_tests__touchpad_custom.snap
---
source: tests/snapshot_tests.rs
expression: kdl
---
// Touchpad settings - managed by Nirify

input {
    touchpad {
        tap
        dwt
        dwtp
        natural-scroll
        accel-speed 0.30
        click-method "clickfinger"
        scroll-method "two-finger"
    }
}
