tests/snapshots/snapshot_tests__touchpad_default.snap
---
source: tests/snapshot_tests.rs
expression: kdl
---
// Touchpad settings - managed by Nirify

input {
    touchpad {
    }
}
