tests/snapshots/snapshot_tests__window_rules_complex.snap
---
source: tests/snapshot_tests.rs
expression: kdl
---
// Window rules - managed by Nirify


// Terminals floating
window-rule {
    match app-id="kitty"
    match app-id="Alacritty"
    open-floating true
}

// Video players fullscreen
window-rule {
    match app-id="mpv"
    open-fullscreen true
    block-out-from "screencast"
}
